--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,6 +18,7 @@
 #
 # CDDL HEADER END
 #
+
 #
 # Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
@@ -1038,7 +1038,7 @@ CONSCONFIG_OBJS += consconfig.o
 
 CONSCONFIG_DACF_OBJS  += consconfig_dacf.o consplat.o
 
-TERMINAL_EMULATOR_OBJS += terminal-emulator.o 7x14.o
+TEM_OBJS += tem.o tem_safe.o 6x10.o 7x14.o 12x22.o
 
 KBTRANS_OBJS +=				\
 		kbtrans.o		\
