4659930 ip_anon_rcm`ifaddrlist() misbehaves when no interfaces are found 4803054 ip_anon_rcm`ifaddrlist() contains unsafe string strncpy() usage 6370980 ifaddrlist() needs to be fixed up and put in libinetutil 6372093 purge ip_anon_register()'s pathetic attempts to paper over 4659930

--- a/usr/src/cmd/cmd-inet/Makefile
+++ b/usr/src/cmd/cmd-inet/Makefile
@@ -22,17 +22,13 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright (c) 1989-2000 by Sun Microsystems, Inc.
-# All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
 #
-#
-# include global definitions
+
 include	../Makefile.cmd
 
-SUBDIR1=	common
-SUBDIR2=	etc sbin usr.bin usr.sbin usr.lib usr.sadm
-SUBDIRS=	$(SUBDIR1) $(SUBDIR2)
-
+SUBDIRS=	etc sbin usr.bin usr.sbin usr.lib usr.sadm
 MSGSUBDIRS=	usr.bin usr.sbin usr.lib usr.sadm
 POFILES=        usr.bin/usr.bin.po usr.sbin/usr.sbin.po usr.sadm/usr.sadm.po
 POFILE=		cmd-inet.po
@@ -48,9 +44,7 @@ _msg:=          TARGET= _msg
 
 .PARALLEL:	$(SUBDIRS)
 
-all install lint: $(SUBDIR1) .WAIT $(SUBDIR2)
-
-clean:		$(SUBDIRS)
+all clean install lint: $(SUBDIRS)
 
 clobber:	$(SUBDIRS) local_clobber
 
@@ -59,11 +53,11 @@ local_clobber:
 
 _msg: $(MSGSUBDIRS)
 	$(RM) $(POFILE)
-	cat $(POFILES) > $(POFILE)
+	$(CAT) $(POFILES) > $(POFILE)
 	$(RM)  $(MSGDOMAIN)/$(POFILE)
-	cp $(POFILE) $(MSGDOMAIN)
+	$(CP) $(POFILE) $(MSGDOMAIN)
 
 $(SUBDIRS): FRC
-	@cd $@; pwd; $(MAKE) $(MFLAGS) $(TARGET)
+	@cd $@; pwd; $(MAKE) $(TARGET)
 
 FRC:
