--- a/usr/src/uts/intel/Makefile.intel.shared
+++ b/usr/src/uts/intel/Makefile.intel.shared
@@ -291,6 +291,7 @@ DRV_KMODS	+= vni
 DRV_KMODS	+= vol
 DRV_KMODS	+= wc
 DRV_KMODS	+= winlock
+DRV_KMODS	+= xge
 DRV_KMODS	+= zcons
 
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= chxge
@@ -298,7 +299,6 @@ $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= glm
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= llc2
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= mpt
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= sgen
-$(CLOSED_BUILD)CLOSED_DRV_KMODS	+= xge
 
 #
 # Common code drivers
