--- a/usr/src/uts/sparc/Makefile.sparc.shared
+++ b/usr/src/uts/sparc/Makefile.sparc.shared
@@ -232,6 +232,7 @@ DRV_KMODS	+= dld
 DRV_KMODS	+= ipf pfil
 DRV_KMODS	+= rpcib
 DRV_KMODS	+= vni
+DRV_KMODS	+= xge
 
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= glm
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= isp
@@ -274,7 +275,6 @@ $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= sgen
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= socal
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= uata
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= usbser_edge
-$(CLOSED_BUILD)CLOSED_DRV_KMODS	+= xge
 
 #
 #	I/O framework test drivers
