--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -1257,3 +1257,13 @@ CH_COM_OBJS =	ch_mac.o ch_subr.o cspi.o espi.o ixf1010.o mc3.o mc4.o mc5.o \
 #	PCI strings file 
 #
 PCI_STRING_OBJS = pci_strings.o
+
+#
+#	Xframe 10G NIC driver module
+#
+XGE_OBJS = xge.o xgell.o
+
+XGE_HAL_OBJS =  xgehal-channel.o xgehal-fifo.o xgehal-ring.o  xgehal-config.o \
+		xgehal-driver.o  xgehal-mm.o xgehal-stats.o  xgehal-device.o \
+		xge-queue.o  xgehal-mgmt.o xgehal-mgmtaux.o
+
