--- a/usr/src/lib/cfgadm_plugins/sata/i386/Makefile
+++ b/usr/src/lib/cfgadm_plugins/sata/i386/Makefile
@@ -18,49 +18,19 @@
 #
 # CDDL HEADER END
 #
+
 #
 # Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
 #
-# lib/cfgadm_plugins/Makefile
+# lib/cfgadm_plugins/sata/i386/Makefile
 #
 
-include $(SRC)/Makefile.master
-
-CLOSED_PLUGIN = $(CLOSED)/lib/cfgadm_plugins/
-
-COMMON_SUBDIRS= scsi pci usb ib
-sparc_SUBDIRS=	sbd
-
-i386_SUBDIRS= sata
-
-$(CLOSED_BUILD)sparc_SUBDIRS += $(CLOSED_PLUGIN)/ac
-$(CLOSED_BUILD)sparc_SUBDIRS += $(CLOSED_PLUGIN)/sysctrl
-
-SUBDIRS= $(COMMON_SUBDIRS) $($(MACH)_SUBDIRS)
-
-ALL_SUBDIRS= $(COMMON_SUBDIRS) $(sparc_SUBDIRS) $(i386_SUBDIRS)
-
-MSGSUBDIRS= $(ALL_SUBDIRS)
-
-all:= 		TARGET= all
-install:=	TARGET= install
-clean:=		TARGET= clean
-clobber:=	TARGET= clobber
-lint:=		TARGET= lint
-_msg:=		TARGET= _msg
+MAPDIR= ../spec/i386
+include ../Makefile.com
 
 .KEEP_STATE:
 
-all clean clobber lint: $(SUBDIRS)
-
-install: all $(SUBDIRS)
-
-_msg: $(MSGSUBDIRS)
-
-$(ALL_SUBDIRS): FRC
-	@cd $@; pwd; $(MAKE) $(TARGET)
-
-FRC:
+install: all $(ROOTLIBS) $(ROOTLINKS)
