--- a/usr/src/uts/intel/Makefile.intel.shared
+++ b/usr/src/uts/intel/Makefile.intel.shared
@@ -272,6 +272,7 @@ DRV_KMODS	+= sad
 DRV_KMODS	+= sctp
 DRV_KMODS	+= sctp6
 DRV_KMODS	+= sd
+DRV_KMODS	+= si3124
 DRV_KMODS	+= spdsock
 DRV_KMODS	+= smbios
 DRV_KMODS	+= sppp
@@ -483,6 +484,7 @@ MISC_KMODS	+= pcmcia
 MISC_KMODS	+= rpcsec
 MISC_KMODS	+= rpcsec_gss
 MISC_KMODS	+= rsmops
+MISC_KMODS	+= sata
 MISC_KMODS	+= scsi
 MISC_KMODS	+= strategy
 MISC_KMODS	+= strplumb
