6368491 picl can't access power supply fruid proms on Boston 6369218 prtfru prints an error message because the 1068e disk controller fruid prom is missing 6371983 fan fru paths on Boston are incorrect

--- a/usr/src/cmd/picl/plugins/sun4u/boston/frudata/libpiclfrudata.conf
+++ b/usr/src/cmd/picl/plugins/sun4u/boston/frudata/libpiclfrudata.conf
@@ -20,7 +20,7 @@
 #
 
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -112,8 +112,8 @@ name:/platform/i2c@1f,520000/sas-backplane-fru-prom@0,48
 PROP FRUDevicePath string r 0 "/devices/i2c@1f,520000/sas-backplane-fru-prom@0,48:sas-backplane-fru-prom"
 
 # SAS crontroller fru prom
-name:/platform/i2c@1f,520000/sasctrl-fru-prom@0,46
-PROP FRUDevicePath string r 0 "/devices/i2c@1f,520000/sasctrl-fru-prom@0,46:sasctrl-fru-prom"
+name:/platform/i2c@1f,520000/sas-ctrl-fru-prom@0,46
+PROP FRUDevicePath string r 0 "/devices/i2c@1f,520000/sas-ctrl-fru-prom@0,46:sas-ctrl-fru-prom"
 
 # Front IO board FRU PROM
 name:/platform/i2c@1f,520000/front-io-fru-prom@0,4e
