PSARC 2004/779 SATA HBA Framework Support PSARC 2005/679 SATA HBA Framework Support Updated 6326077 Require support for the Marvell 88SX50xx SATA controllers 6326078 Require support for the Marvell 88SX60xx SATA controllers

--- a/usr/src/pkgdefs/Makefile
+++ b/usr/src/pkgdefs/Makefile
@@ -112,7 +112,8 @@ i386_SUBDIRS= \
 	SUNWrtls \
 	SUNWsi3124 \
 	SUNWvia823x \
-	SUNWatheros
+	SUNWatheros \
+	SUNWmv88sx
 
 i386_XMODS= \
 	SUNWadpu320 \
