--- a/usr/src/uts/intel/Makefile.intel.shared
+++ b/usr/src/uts/intel/Makefile.intel.shared
@@ -299,6 +299,7 @@ $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= chxge
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= glm
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= llc2
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= mpt
+$(CLOSED_BUILD)CLOSED_DRV_KMODS	+= marvell88sx 
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= sgen
 
 #
