6365800 fruaccess library incorrectly assumes all 256-byte FRUID PROMs are on DIMMs 6374002 Update libfrureg with latest FRU ID registry contents

--- a/usr/src/cmd/picl/plugins/sun4u/lib/fruaccess/fru_container.conf
+++ b/usr/src/cmd/picl/plugins/sun4u/lib/fruaccess/fru_container.conf
@@ -20,7 +20,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2003 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -36,7 +36,7 @@ i2c-at24c64|6krw2kro|8k_6krw2kro_SEEPROM:1:0,0,6144:1,6144,2048
 2kro:1:1,0,2048
 
 # 256 bytes read/write section.
-256rw:1:0,0,256
+i2c-at34cps|256rw:1:0,0,256
 
 # Available section of device used in commodity FRUs
 i2c-at34c02|128rw:1:2,0,128,SPD:0,128,128
