6376691 move envctrl to usr/src 6376692 move sysctrl to usr/src 6376694 move simmstat to usr/src 6376705 move perl kstat modules to usr/src 6377328 move ac to usr/src 6377329 move fhc to usr/src 6377331 usr/src/tools/env/opensolaris.sh missing ACR definition 6377341 move environ to usr/src

--- a/usr/src/uts/sun4u/Makefile.sun4u.shared
+++ b/usr/src/uts/sun4u/Makefile.sun4u.shared
@@ -18,6 +18,7 @@
 #
 # CDDL HEADER END
 #
+
 #
 # Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
@@ -175,12 +176,12 @@ IMPLEMENTATIONS		+= blade .WAIT
 IMPLEMENTATIONS		+= boston .WAIT
 IMPLEMENTATIONS		+= seattle .WAIT
 IMPLEMENTATIONS		+= chicago .WAIT
+IMPLEMENTATIONS		+= sunfire .WAIT
 
 $(CLOSED_BUILD)CLOSED_IMPLEMENTATIONS	= chalupa .WAIT
 $(CLOSED_BUILD)CLOSED_IMPLEMENTATIONS	+= ents .WAIT
 $(CLOSED_BUILD)CLOSED_IMPLEMENTATIONS	+= lw2plus .WAIT
 $(CLOSED_BUILD)CLOSED_IMPLEMENTATIONS	+= lw8 .WAIT
-$(CLOSED_BUILD)CLOSED_IMPLEMENTATIONS	+= sunfire .WAIT
 $(CLOSED_BUILD)CLOSED_IMPLEMENTATIONS	+= makaha .WAIT
 
 #
