--- a/usr/src/cmd/perl/5.6.1/contrib/Makefile
+++ b/usr/src/cmd/perl/5.6.1/contrib/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -41,13 +40,12 @@ SUN_SOLARIS = Sun/Solaris
 PERL_DYNAMIC_EXT = \
     $(SUN_SOLARIS)/Utils \
     $(SUN_SOLARIS)/Intrs \
+    $(SUN_SOLARIS)/Kstat \
     $(SUN_SOLARIS)/Project \
     $(SUN_SOLARIS)/Task \
     $(SUN_SOLARIS)/Exacct \
     $(SUN_SOLARIS)/Privilege \
     $(SUN_SOLARIS)/Ucred
-
-CLOSED_PERL_EXT += $(SUN_SOLARIS)/Kstat
 
 # Add any pure-perl extensions here.
 PERL_NONXS_EXT = \
@@ -57,26 +55,15 @@ PERL_NONXS_EXT = \
 PERL_EXT = $(PERL_DYNAMIC_EXT) $(PERL_NONXS_EXT)
 PERL_EXT_MAKEFILES = $(PERL_EXT:%=%/Makefile)
 
-ALL_EXT = $(PERL_EXT)
-ALL_EXT_MAKEFILES = $(PERL_EXT_MAKEFILES)
+all: copy_contrib $(PERL_EXT_MAKEFILES) $(PERL_EXT)
 
-$(CLOSED_BUILD)ALL_EXT += $(CLOSED_PERL_EXT)
-$(CLOSED_BUILD)ALL_EXT_MAKEFILES += $(CLOSED_PERL_EXT:%=%/Makefile)
-
-all: copy_contrib $(ALL_EXT_MAKEFILES) $(ALL_EXT)
-
-.PARALLEL: $(ALL_EXT_MAKEFILES) $(ALL_EXT)
+.PARALLEL: $(PERL_EXT_MAKEFILES) $(PERL_EXT)
 
 #
 # copy_contrib copies the clearfiles from ../../contrib to here.
 #
 copy_contrib:   ../../contrib/copy_contrib
 	@ ../../contrib/copy_contrib ../../contrib . $(PERL_EXT)
-	@ if [ -d $(CLOSED)/cmd/perl/contrib -a \
-	    -n "$(CLOSED_PERL_EXT)" ]; then \
-		../../contrib/copy_contrib $(CLOSED)/cmd/perl/contrib \
-		    . $(CLOSED_PERL_EXT); \
-	fi
 
 #
 # Note: this is a dummy install target; during 'make all' this Makefile
@@ -88,7 +75,7 @@ install: all
 
 clean:
 	-@ $(PERL_MM_ENV); \
-	for ext in $(ALL_EXT); do \
+	for ext in $(PERL_EXT); do \
 		if [ -d $$ext ]; then \
 			( \
 			cd $$ext; pwd; \
@@ -101,7 +88,7 @@ clean:
 
 clobber:
 	-@ $(PERL_MM_ENV); \
-	for ext in $(ALL_EXT); do \
+	for ext in $(PERL_EXT); do \
 		if [ -d $$ext ]; then \
 			( \
 			cd $$ext; pwd; \
@@ -116,7 +103,7 @@ clobber:
 test: all
 	-@ $(PERL_MM_ENV); \
 	LD_LIBRARY_PATH=$(PERL_DISTRIB); export LD_LIBRARY_PATH; \
-	for ext in $(ALL_EXT); do \
+	for ext in $(PERL_EXT); do \
 		( \
 		cd $$ext; pwd; \
 		[ -f Makefile.old ] && mf=Makefile.old; \
