--- a/usr/src/uts/sun4u/sys/Makefile
+++ b/usr/src/uts/sun4u/sys/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -22,7 +21,7 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # uts/sun4u/sys/Makefile
@@ -76,6 +75,10 @@ HDRS=	\
 	cheetahregs.h		\
 	cpr_impl.h		\
 	ecc_kstat.h		\
+	envctrl.h		\
+	envctrl_gen.h		\
+	envctrl_ue250.h		\
+	envctrl_ue450.h		\
 	gpio_87317.h		\
 	fc_plat.h		\
 	iocache.h		\
@@ -109,10 +112,6 @@ HDRS=	\
 	wrsm_types.h
 
 $(CLOSED_BUILD)CLOSED_HDRS=	\
-	envctrl.h		\
-	envctrl_gen.h		\
-	envctrl_ue250.h		\
-	envctrl_ue450.h		\
 	memtestio_ch.h		\
 	memtestio_chp.h		\
 	memtestio_ja.h		\
