6322014 boot-loaded kmdb tries to read CTF from bootmem 6323184 kmdb dmods need to use fuzzy ctfmerge 6323387 kmdb_kvm has incomplete DMOD CTF support 6324640 kmdb fault + entry tries to free constant string

--- a/usr/src/cmd/mdb/Makefile.module
+++ b/usr/src/cmd/mdb/Makefile.module
@@ -20,7 +20,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -192,7 +192,7 @@ $(KMODFILE): kmod .WAIT $(KMODOBJS) $(MAPFILE)
 	$(LD) -dy -r $(MAPFILE:%=-M%) -Nmisc/kmdbmod -o $@ $(KMODOBJS)
 	$(KMDB_LINKTEST_CMD)
 	$(KMDB_FPTEST_CMD)
-	$(CTFMERGE) -L VERSION -o $@ $(KMODOBJS)
+	$(CTFMERGE) -f -L VERSION -o $@ $(KMODOBJS)
 	$(SETDYNFLAG) -f DF_1_NOKSYMS $@
 
 linktest: linktest_check .WAIT kmod .WAIT $(KMODOBJS)
