6370368 SUNWcar pkgchk error for libc_psr.so.1 in Nevada nightly 20060109 6376429 memmove gets a sigv from xemacs under certain conditions 6376682 SPARC /etc/flash/precreation/caplib doesn't execute properly 6377526 x86 caplib.ksh will fail if multiple hwcap libraries are mounted

--- a/usr/src/lib/libc_psr/sun4u-us3/Makefile
+++ b/usr/src/lib/libc_psr/sun4u-us3/Makefile
@@ -20,7 +20,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #pragma ident	"%Z%%M%	%I%	%E% SMI"
@@ -75,13 +75,13 @@ $(ROOT_PSM_LIB_DIR):
 	-$(INS.dir.root.bin)
 
 $(ROOT_PSM_LIB_DIR)/$(MODULE):	$(ROOT_PSM_LIB_DIR) $(MODULE)
-	$(RM) -r $@; $(INS) -s -m $(FILEMODE) -f $(@D) $(MODULE)
+	$(RM) -r $@; $(INS) -s -f $(@D) $(MODULE)
 
 $(ROOT_PSM_LIB64_DIR):
 	-$(INS.dir.root.bin)
 
 $(ROOT_PSM_LIB64_DIR)/$(MODULE):	$(ROOT_PSM_LIB64_DIR) $(MODULE)
-	$(RM) -r $@; $(INS) -s -m $(FILEMODE) -f $(@D) $(MODULE)
+	$(RM) -r $@; $(INS) -s -f $(@D) $(MODULE)
 
 $(LIBC_PSR_DIRS):
 	-$(INS.dir.root.bin)
