--- a/usr/src/lib/libzfs/sparcv9/Makefile
+++ b/usr/src/lib/libzfs/sparcv9/Makefile
@@ -20,12 +20,14 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 
 include ../Makefile.com
 include ../../Makefile.lib.64
+
+sparcv9_C_PICFLAGS= -K PIC
 
 install: all $(ROOTLIBS64) $(ROOTLINKS64)
