backout 6337341/6374891: baby did a bad bad thing

--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -1220,8 +1220,8 @@ RPCIB_OBJS += rpcib.o
 
 KMDB_OBJS += kdrv.o
 
-BGE_OBJS += bge_main.o bge_chip.o bge_kstats.o bge_log.o bge_ndd.o \
-		bge_atomic.o bge_mii.o bge_send.o bge_recv.o
+BGE_OBJS += bge_main2.o bge_chip2.o bge_kstats.o bge_log.o bge_ndd.o \
+		bge_atomic.o bge_mii.o bge_send.o bge_recv2.o
 
 IXGB_OBJS += ixgb.o ixgb_atomic.o ixgb_chip.o ixgb_gld.o ixgb_kstats.o \
 		ixgb_log.o ixgb_ndd.o ixgb_rx.o ixgb_tx.o ixgb_xmii.o
