FWARC/2006/002 Fire Performance Counters API 6290458 support fire performance counters for chicago/ontario/erie

--- a/usr/src/pkgdefs/Makefile
+++ b/usr/src/pkgdefs/Makefile
@@ -71,6 +71,8 @@ sparc_SUBDIRS= \
 	SUNWluxl \
 	SUNWonmtst.u \
 	SUNWonmtst.v \
+	SUNWiopc.u \
+	SUNWiopc.v \
 	SUNWpdu	  \
 	SUNWpstl.u \
 	SUNWsckmr \
