--- a/usr/src/uts/sun4v/Makefile.sun4v.shared
+++ b/usr/src/uts/sun4v/Makefile.sun4v.shared
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,6 +18,7 @@
 #
 # CDDL HEADER END
 #
+
 #
 # Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
@@ -320,11 +320,12 @@ DRV_KMODS	+= cpc
 DRV_KMODS	+= rootnex
 DRV_KMODS	+= trapstat
 DRV_KMODS	+= px
+DRV_KMODS	+= fpc
 DRV_KMODS	+= glvc
 DRV_KMODS	+= bge
-DRV_KMODS      += mdesc
+DRV_KMODS	+= mdesc
 DRV_KMODS	+= ebus
-DRV_KMODS       += su
+DRV_KMODS	+= su
 
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= memtest
 $(CLOSED_BUILD)CLOSED_DRV_KMODS	+= ncp
